and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

* Add check levels
* IS_SMARTMONTOOLS (#198)
* IS_EVOLIX_GROUP: new check to verify that all Evolix users are in "evolix" group (#161)
* IS_PHPPGADMINAPACHECONF and IS_PHPLDAPADMINAPACHECONF (#193)
* IS_SYSTEMDUSERUNIT in --future (#196)

### Changed

* IS_DUPLICATE_FS_LABEL now excludes ZFS pool and device /dev/zd*
* IS_MARIADBEVOLINUXCONF enabled back in --future
* IS_OLD_HOME_DIR enabled back in --future
* IS_PHPEVOLINUXCONF enabled back in --future
* IS_SSHLASTMATCH enabled in --future

### Fixed

* find(1): follow symbolic links when searching for backup
* get_version: avoid stderr if minifirewall version can’t be guessed on wheezy
* IS_LDAP_BACKUP: check also new backup path

### Deprecated

### Removed

* IS_NRPEDISKS already deactivated fourteen years ago
* IS_DISKPERF already deactivated six years ago

### Security

## [25.10.3] 2025-10-20

### Removed

* meta check is useless, and pushed into each check

## [25.10.2] 2025-10-20

### Changed

* IS_NRPEPRESSURE: only in --future
* IS_MINIFWINCLUDES: accept comments

### Fixed

* minifirewall might not be installed, it's OK

## [25.10.1] 2025-10-16

### Removed

* IS_EVOMAINTENANCECONF: don't search for DB hook variables anymore

## [25.10] 2025-10-13

### Added

* New --future flag (#182) that activates IS_MINIFW_RELATED, IS_NO_SIGNED_BY,
  IS_NOT_DEB822, and IS_POSTFIX_IPV6_DISABLED.
* Support minifirewall managed by systemd

## [25.08.1] 2025-08-19

### Added

* IS_PHPMYADMINAPACHECONF: add quotes and curly-braces to some variables

### Changed

* IS_MINIFW_RELATED: disable regex when not needed
* IS_MINIFW_RELATED: disable check until most servers are fixed

### Fixed

* IS_MINIFW_RELATED: globbing doesn't work inside double-quotes

## [25.08] 2025-08-08

### Added

* Add IS_INTERFACESNETMASK check
* Add IS_WKHTMLTOPDF and IS_LXC_WKHTMLTOPDF (#180)
* Add IS_MINIFW_RELATED (#167)